# tg-bot-workout

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  test.db
.cursor/rules/: tg-bot.mdc
.github/workflows/: deploy.yml
migrations/: env.py
migrations/versions/: 03972334d397_initial.py
scripts/: init_db.py  load_running_program.py
src/bot/: config.py  echo.py  keyboards.py  logging.py  main.py  user_state.py
src/bot/db/: base.py  database.py  init_db.py  models.py  queries.py  repositories.py
src/bot/db/models/: __init__.py  base.py  training.py  user.py
src/bot/handlers/: common.py  main_menu.py  running.py
tests/: conftest.py  test_echo.py  test_logging.py  test_main.py  test_user_model.py  test_user_repository.py
